...
                  )}
                </View>
              )}

              <View style={styles.buttonContainer}>
                <TouchableOpacity
                  testID="app-modal-confirm-button"
                  accessibilityLabel="app-modal-confirm-button"
                  activeOpacity={isConfirmButtonDisabled ? 1 : 0.78}
                  accessibilityState={{ disabled: isConfirmButtonDisabled }}
                  style={[
                    styles.confirmButton,
                    {
...
