appId: ${APP_ID}
---
- openLink: "musikalokal://marketplace"
- assertVisible:
    id: "mobile-marketplace-page"
- tapOn:
    id: "mobile-marketplace-create-listing-hero-button"
- assertVisible:
    id: "mobile-marketplace-listing-modal"
- tapOn:
    id: "mobile-marketplace-title-input"
- inputText: ${E2E_PRODUCT_TITLE}
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "mobile-marketplace-submit-button-bottom"
    direction: DOWN
    timeout: 60000
    speed: 80
    visibilityPercentage: 50
    centerElement: true
- tapOn:
    id: "mobile-marketplace-submit-button-bottom"
- waitForAnimationToEnd:
    timeout: 1500
- tapOn:
    id: "mobile-marketplace-submit-button-bottom"
    optional: true
