appId: ${APP_ID}
---
- openLink: "musikalokal://add_group"
- assertVisible:
    id: "mobile-add-group-page"
- tapOn:
    id: "mobile-add-group-group-name-input"
- inputText: ${E2E_GROUP_NAME}
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "mobile-add-group-next-button"
    direction: DOWN
    timeout: 60000
    speed: 80
    visibilityPercentage: 50
    centerElement: true
- tapOn:
    id: "mobile-add-group-next-button"
- scrollUntilVisible:
    element:
      id: "mobile-add-group-next-button"
    direction: DOWN
    timeout: 60000
    speed: 80
    visibilityPercentage: 50
    centerElement: true
- tapOn:
    id: "mobile-add-group-next-button"
- tapOn:
    id: "mobile-add-group-next-button"
- extendedWaitUntil:
    visible:
      id: "custom-alert-button-create"
    timeout: 60000
- tapOn:
    id: "custom-alert-button-create"
