appId: ${APP_ID}
---
- openLink: "musikalokal://add_production"
- assertVisible:
    id: "mobile-add-production-page"
- tapOn:
    id: "mobile-production-name-input"
- inputText: ${E2E_PRODUCTION_NAME}
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "mobile-production-description-input"
    direction: DOWN
- tapOn:
    id: "mobile-production-description-input"
- inputText: ${E2E_PRODUCTION_DESCRIPTION}
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "mobile-production-submit-button"
    direction: DOWN
    timeout: 60000
    speed: 80
    visibilityPercentage: 50
    centerElement: true
- tapOn:
    id: "mobile-production-submit-button"
- waitForAnimationToEnd:
    timeout: 2000
- extendedWaitUntil:
    visible: "Production Team Created"
    timeout: 60000
