appId: ${APP_ID}
---
- openLink: "musikalokal://add_studio"
- assertVisible:
    id: "mobile-add-studio-page"
- tapOn:
    id: "mobile-add-studio-studio-name-input"
- inputText: ${E2E_STUDIO_NAME}
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "mobile-add-studio-description-input"
    direction: DOWN
- tapOn:
    id: "mobile-add-studio-description-input"
- inputText: ${E2E_STUDIO_DESCRIPTION}
- hideKeyboard
- waitForAnimationToEnd:
    timeout: 2000
- swipe:
    start: "50%,80%"
    end: "50%,35%"
    duration: 900
    waitToSettleTimeoutMs: 500
- swipe:
    start: "50%,80%"
    end: "50%,35%"
    duration: 900
    waitToSettleTimeoutMs: 500
- scrollUntilVisible:
    element:
      id: "mobile-add-studio-next-button"
    direction: DOWN
    timeout: 60000
    speed: 80
    visibilityPercentage: 50
    centerElement: true
- tapOn:
    id: "mobile-add-studio-next-button"
- scrollUntilVisible:
    element:
      id: "mobile-add-studio-next-button"
    direction: DOWN
    timeout: 60000
    speed: 80
    visibilityPercentage: 50
    centerElement: true
- tapOn:
    id: "mobile-add-studio-next-button"
- scrollUntilVisible:
    element:
      id: "mobile-add-studio-next-button"
    direction: DOWN
    timeout: 60000
    speed: 80
    visibilityPercentage: 50
    centerElement: true
- tapOn:
    id: "mobile-add-studio-next-button"
- scrollUntilVisible:
    element:
      id: "mobile-add-studio-next-button"
    direction: DOWN
    timeout: 60000
    speed: 80
    visibilityPercentage: 50
    centerElement: true
- tapOn:
    id: "mobile-add-studio-next-button"
- extendedWaitUntil:
    visible:
      id: "custom-alert-button-create"
    timeout: 60000
- tapOn:
    id: "custom-alert-button-create"
- extendedWaitUntil:
    visible: "Success!"
    timeout: 60000
- tapOn:
    id: "app-modal-confirm-button"
