appId: ${APP_ID}
---
- openLink: "musikalokal://create_playlist"
- assertVisible:
    id: "mobile-create-playlist-page"
- tapOn:
    id: "mobile-playlist-title-input"
- inputText: ${E2E_PLAYLIST_TITLE}
- hideKeyboard
- tapOn:
    id: "mobile-playlist-description-input"
- inputText: ${E2E_PLAYLIST_DESCRIPTION}
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "mobile-playlist-save-button"
    direction: DOWN
    timeout: 60000
    speed: 80
    visibilityPercentage: 50
    centerElement: true
- tapOn:
    id: "mobile-playlist-save-button"
- waitForAnimationToEnd:
    timeout: 1500
- tapOn:
    id: "mobile-playlist-save-button"
